Optimize the code: create directories to categorize the files; display the random walk results more clearly.